--- a/client/src/styles/TeamManagmenet.module.css
+++ b/client/src/styles/TeamManagmenet.module.css
@@ -60,5 +60,25 @@
   .margin-bottom {
     margin-bottom: 16px;
   }
+
+  .margin-top {
+    margin-top: 16px;
+  }
+
+  .search-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  
+  .input-container {
+    flex: 1;
+    width: 150px;
+  }
+
+  .error-message { 
+    color: red;
+    text-align: center;
+  }
   
   
