--- a/client/src/styles/UserManagement.module.css
+++ b/client/src/styles/UserManagement.module.css
@@ -1,24 +1,51 @@
+/* UserManagement.module.css */
+
+/* Container for the entire UserManagement component */
 .usermanagement-form-main {
-    background: #eee;
-    padding: 45px 300px;
-  }
-  
+  background: #eee;
+  padding: 45px 20px; /* Adjust the padding for smaller screens */
+}
+
+/* Form container */
+.usermanagement-form-container {
+  background: #fff;
+  padding: 25px 20px; /* Adjust the padding for smaller screens */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Form input */
+.usermanagement-input {
+  width: 100%; /* Remove !important; to make it responsive */
+  max-width: 300px; /* Set a max-width to prevent excessive stretching */
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+/* Form button container */
+.usermanagement-form-button-container {
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* Table container */
+.usermanagement-table-main {
+  margin-top: 20px;
+}
+
+.ant-form-item-label {
+  padding-right: 24px; /* Adjust the padding as needed */
+}
+
+/* Media query for small screens */
+@media screen and (max-width: 768px) {
   .usermanagement-form-container {
-    background: #fff;
-    padding: 25px 100px;
-    display: flex;
-    justify-content: center;
+    padding: 25px 10px; /* Adjust the padding for smaller screens */
   }
-  
-  .usermanagement-input {
-    width: 300px !important;
+
+  .ant-form-item-label {
+    padding-right: 8px; /* Adjust the padding as needed */
   }
-  
-  .usermanagement-form-button-container {
-    text-align: center;
-  }
-  
-  .usermanagement-table-main {
-    margin-top: 20px;
-  }
-  
+}
