Remove nashi when user searches team and make suggested changes

--- a/client/src/styles/UserSearch.module.css
+++ b/client/src/styles/UserSearch.module.css
@@ -1,35 +1,50 @@
 .usermanagement-form-main {
-    background: #eee;
-    padding: 45px 300px;
-  }
-  
-  .usermanagement-form-container {
-    background: #fff;
-    padding: 25px 100px;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .usermanagement-input {
-    width: 300px !important;
-  }
-  
-  .usermanagement-form-button-container {
+  background: #eee;
+  padding: 45px;
+}
+
+.usermanagement-form-container {
+  background: #fff;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%; /* Set the form container width to 100% */
+ 
+  margin: 0 auto; /* Center the form container horizontally */
+}
+
+.usermanagement-input {
+  width: 100%; /* Set the input width to 100% */
+}
+
+.usermanagement-form-button-container {
+  text-align: center;
+  margin-top: 20px; /* Add some margin at the top */
+}
+
+.usermanagement-table-main {
+  margin-top: 20px;
+}
+
+.table {
+  & thead {
+    background-color: #707070;
     text-align: center;
   }
-  
-  .usermanagement-table-main {
-    margin-top: 20px;
+
+  & tbody td:first-child {
+    text-align: right;
+  }
+}
+
+/* Add media query for smaller screens */
+@media (max-width: 768px) {
+  .usermanagement-form-container {
+    padding: 15px;
   }
 
-  .table {
-    & thead {
-      background-color: #707070; /* Set the background color for the table header */
-      text-align: center; /* Center align the text in the table header */
-    }
-  
-    & tbody td:first-child {
-      text-align: right; /* Center align the text in the first column of the table body */
-    }
+  .usermanagement-input {
+    width: 100%;
   }
-  
+}
