--- a/client/src/styles/TeamManagmenet.module.css
+++ b/client/src/styles/TeamManagmenet.module.css
@@ -22,10 +22,12 @@
   height: 400px;
   width: 225px;
   overflow-y: scroll;
+  background-color: white;
 }
 
 .teamsetting-btn {
   background-color: #1677ff;
+  color: white;
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
@@ -40,6 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .teamsetting-btn-main {
@@ -56,6 +59,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   user-select: none;
+  background-color: white;
 }
 
 .teamsetting-user:hover {
